Fix z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -963,7 +963,7 @@ body {
       position: absolute;
       top: 9px;
       right: 110px;
-      z-index: 100;
+      z-index: 1000;
     }
   
     .download_menu li {
